name:                NinetyNine
version:             0.1.0.0
synopsis:            solves the 99 haskell problems
license:             GPL-2
license-file:        LICENSE
author:              Florian Knupfer <fknupfer@gmail.com>
maintainer:          Florian Knupfer <fknupfer@gmail.com>
category:            Game
build-type:          Simple
cabal-version:       >=1.18

executable NinetyNine
  build-depends:       base == 4.*
                     , QuickCheck
                     , test-invariant
                     , tasty
  main-is:             Main.hs                   
  hs-source-dirs:      src
  default-language:    Haskell2010


