name:                NinetyNine
version:             0.1.0.0
synopsis:            solves the 99 haskell problems
license:             GPL-2
license-file:        LICENSE
author:              Florian Knupfer <fknupfer@gmail.com>
maintainer:          Florian Knupfer <fknupfer@gmail.com>
category:            Game
build-type:          Simple
cabal-version:       >=1.18

executable empty
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:       base == 4.*
                     , random >= 1.1
                     , tasty >= 0.10.1.1
                     , tasty-quickcheck >= 0.8.3.2
                     , test-invariant >= 0.1.0.0
  default-language:    Haskell2010

test-suite NinetyNine
  ghc-options:         -O2 -threaded -with-rtsopts=-N
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base == 4.*
                     , random >= 1.1
                     , tasty >= 0.10.1.1
                     , tasty-quickcheck == 0.8.*
                     , test-invariant >= 0.1.0.0
  main-is:             Main.hs                   
  hs-source-dirs:      test
  default-language:    Haskell2010


